# torch-monitor

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  Makefile.config  README.md
driver/: Makefile  Makefile.config  driver.cc
include/: python_state.h  torch_monitor.h  torch_profiler.h  utils.h
src/: python_state.cc  torch_monitor.cc  torch_profiler.cc  utils.cc
test/: Makefile  Makefile.config  add.py  driver.cc  resnet.py  test_add.sh  test_add_cpu.sh  test_add_cuda.sh  test_mnist.sh  test_mnist_cpu.sh  test_mnist_cuda.sh  test_resnet.sh  test_resnet_cpu.sh  test_resnet_cuda.sh
